src/state/snapshots/protols__state__hover__test__workspace_test_hover-4.snap
---
source: src/state/hover.rs
expression: "state.hover(&a_uri, Position { line: 12, character: 14 })"
---
contents:
  kind: markdown
  value: "```protobuf\ncom.workspace.Author.Address\nmessage Address\n```\n\n---\nAddress is a Address"
range:
  start:
    line: 12
    character: 3
  end:
    line: 12
    character: 17
