src/state/snapshots/protols__state__hover__test__workspace_test_hover-6.snap
---
source: src/state/hover.rs
expression: "state.hover(&c_uri, Position { line: 12, character: 5 })"
---
contents:
  kind: markdown
  value: "```protobuf\ncom.utility.Foobar.Baz\nmessage Baz\n```\n\n---\nWhat is baz?"
range:
  start:
    line: 12
    character: 3
  end:
    line: 12
    character: 6
