src/state/snapshots/protols__state__hover__test__workspace_test_hover-7.snap
---
source: src/state/hover.rs
expression: "state.hover(&a_uri, Position { line: 14, character: 10 })"
---
contents:
  kind: markdown
  value: "```protobuf\ncom.inner.Why\nmessage Why\n```\n\n---\nWhy is a reason with secret"
range:
  start:
    line: 14
    character: 3
  end:
    line: 14
    character: 16
