src/state/snapshots/protols__state__hover__test__workspace_test_hover-8.snap
---
source: src/state/hover.rs
expression: "state.hover(&x_uri, Position { line: 9, character: 18 })"
---
contents:
  kind: markdown
  value: "```protobuf\ncom.inner.secret.SomeSecret\nmessage SomeSecret\n```\n\n---\nSomeSecret is a real secret with hidden string"
range:
  start:
    line: 9
    character: 3
  end:
    line: 9
    character: 31
