src/state/snapshots/protols__state__hover__test__workspace_test_hover.snap
---
source: src/state/hover.rs
expression: "state.hover(&a_uri, Position { line: 15, character: 10 })"
---
contents:
  kind: markdown
  value: "`google.protobuf.Any`\n\n---\n\n**Well-Known Type**\n\n`Any` contains an arbitrary serialized message along with a URL that describes the type of the serialized message.\n\nThe JSON representation of an `Any` value uses the regular representation of the deserialized, embedded message, with an additional field `@type` which contains the type URL.\n\n**Fields:**\n\n- `type_url`: A URL or resource name that uniquely identifies the type of the serialized protocol buffer message.\n- `value`: Must be a valid serialized protocol buffer.\n\n```protobuf\nmessage Any {\n  string type_url = 1;\n  bytes value = 2;\n}\n```\n"
range:
  start:
    line: 15
    character: 3
  end:
    line: 15
    character: 22
